keda/manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: todo-agent
  labels:
    app: web
    app.kubernetes.io/name: web
spec:
  replicas: 1
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels:
        app: web
        app.kubernetes.io/name: web
    spec:
      containers:
        - name: web
          image: ghcr.io/thev1ndu/taskdone-web:0.1.0
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests: { memory: "16Mi", cpu: "10m" }
            limits: { memory: "64Mi", cpu: "100m" }
